# paper2survey

./: .gitignore  DECISIONS.md  README.md  pyproject.toml  survey_system_design.md  survey_system_implementation_guide.md
.claude/: settings.json
neural_algorithmic_reasoning/: anchors.csv  anchors_candidates_v1.csv  config.yaml  outline.md  papers.csv  references.bib  section_assignments_v1.csv
neural_algorithmic_reasoning/schemas/: schema_v1.json  schema_v2.json
survey_system/: cli.py  config.py  paths.py  status.py
survey_system/io/: anchors.py  assignments.py  bib.py  contracts.py  kb.py  outline.py  papers.py  review.py  runlog.py  schemas.py  tables.py
survey_system/llm/: anthropic.py  client.py  openai.py  vertexai.py
survey_system/llm/prompts/: assign_section.txt  design_schema.txt  extract_universal.txt  propose_anchors.txt  propose_outline.txt  summarize_l2.txt  summarize_l3.txt  triage.txt
survey_system/ops/: assign_section.py  build_bundles.py  design_schema.py  extract.py  parse_pdf.py  propose_anchors.py  propose_outline.py  summarize.py  triage.py
survey_system/pdf/: marker_backend.py  pymupdf_backend.py
tests/: test_cli_validate.py  test_config.py  test_io_anchors.py  test_io_assignments.py  test_io_bib.py  test_io_kb.py  test_io_outline.py  test_io_papers.py  test_io_schemas.py  test_io_tables.py  test_llm_client.py  test_ops_assign_section.py  test_ops_build_bundles.py  test_ops_design_schema.py  test_ops_extract.py  test_ops_parse_pdf.py  test_ops_propose_anchors.py  test_ops_propose_outline.py  test_ops_summarize.py  test_ops_triage.py  test_paths.py  test_pdf_marker_backend.py  test_pdf_pymupdf_backend.py  test_runlog_status.py
tests/fixtures/mini_topic/: config.yaml  outline.md  papers.csv  (+1 more)
(+12 files in other folders)
