[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey-system"
version = "0.1.0"
description = "A file-backed survey writing system for iterative paper synthesis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pydantic>=2",
    "typer",
    "pyyaml",
    "python-frontmatter",
]

[project.optional-dependencies]
marker = [
    "marker-pdf",
]

[project.scripts]
survey = "survey_system.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["survey_system"]
artifacts = [
    "survey_system/llm/prompts/*.txt",
    "survey_system/llm/prompts/extract_by_type/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call live external services",
]
